--- a/html_css/style.css
+++ b/html_css/style.css
@@ -5,12 +5,12 @@
 }
 
 /* -- FONTS -- */
-@font-face { font-family:'MuseoSans300'; src:url('fonts/MuseoSans-300.otf'); }
-@font-face { font-family:'MuseoSans700'; src:url('fonts/MuseoSans_700.otf'); }
-@font-face { font-family:'MuseoSans900'; src:url('fonts/MuseoSans_900.otf'); }
-@font-face { font-family:'Museo300'; src:url('fonts/Museo300-Regular.otf'); }
-@font-face { font-family:'Museo500'; src:url('fonts/Museo500-Regular.otf'); }
-@font-face { font-family:'Museo900'; src:url('fonts/Museo900-Regular.otf'); }
+@font-face { font-family:'MuseoSans300';src:url('fonts/MuseoSans-300.otf');}
+@font-face { font-family:'MuseoSans700';src:url('fonts/MuseoSans_700.otf');}
+@font-face { font-family:'MuseoSans900';src:url('fonts/MuseoSans_900.otf');}
+@font-face { font-family:'Museo300';src:url('fonts/Museo300-Regular.otf');}
+@font-face { font-family:'Museo500';src:url('fonts/Museo500-Regular.otf');}
+@font-face { font-family:'Museo900';src:url('fonts/Museo900-Regular.otf');}
 
 body {
 	background: url(img/background-body.jpg);
@@ -27,15 +27,16 @@ div#wrapper {
 /* Header */
 header {
 	margin: 0;
-	padding: 0; 
+	padding: 0;
 	width: 100%;
+	height: 160px;
 	background: url(img/background-header.png) top center no-repeat;
 	position: relative;
 }	
 
 header h1 {
-	padding: 50px; 
-	background-position: center; 
+	padding: 50px;
+	background-position: center;
 }
 
 
@@ -52,17 +53,17 @@ header h1 {
 	float: left;
 	margin-left:10px;
 	list-style:none;
-	text-decoration: none; 
-	font-size: 19px; 
+	text-decoration: none;
+	font-size: 19px;
 }
 	
 #side-menu a {
-	padding: 5px; 
+	padding: 5px;
 	text-shadow: 1px 1px 1px #2b2b2b;
 	color: #fff;
 	font: 16px/14px "Museo300";
-	list-style: none; 
-	text-decoration: none; 
+	list-style: none;
+	text-decoration: none;
 	
 }
 
@@ -73,29 +74,32 @@ header h1 {
 /* MAIN-MENU */
 
 #main-menu {
-	position: absolute; 
-	top: 97px; 
-	left: 41px;
+	position: absolute;
+	bottom: 0;
+	left: 25px;
 	border-bottom: 1px solid white;
+	width: 770px;
+	height: 50px;
 }
 
 #main-menu li {
-	margin: 0 0 25px 0; 
-	float: left; 
-	padding: 10px; 	
-	text-decoration: none; 
+	margin: 0;
+	float: left;
+	padding: 10px 10px 35px 10px;
+	text-decoration: none;
 	list-style: none;
 	font-size: 22px;
+	text-align: center;
 }
 
 #main-menu li a {
 	text-shadow: 1px 1px 1px #2b2b2b;
 	color: #fff;
-	list-style: none; 
-	text-decoration: none; 
-	padding: 5px; 
+	list-style: none;
+	text-decoration: none;
+	padding: 5px;
 }	
 
 #main-menu li a:hover{
-	color: #96d775;
+	text-shadow: 0 0 2px #fff;
 }
