hover main menu change

--- a/html_css/style.css
+++ b/html_css/style.css
@@ -105,23 +105,22 @@ header h1 {
 	padding: 5px;
 }	
 
-#main-menu li a:hover{
-	/*color: #96d775;*/
-	font-family: Museo300;
-	font-weight: bold;
-}
+#main-menu li:hover{
+	background:  url(img/cvetic.png) no-repeat;
+	background-position: bottom;
+	
+	}
 
-/* ARTICLE */
-#content {
+/* CONTENT */
+div#content {
+	
 	border: 1px solid black; 
-	position: inherit;
-	top: 200px; 
-	left: 41px;
+	border-top-left-radius: 15px;
+	border-top-right-radius: 15px;
+	position: absolute;
+	top: 185px; 
+	left: 387px;
 	width: 815px;
 	height: 597px;
-	display: block; 
-	background: rgba (0,0,0, 0.6);
-	text-shadow: 0 0 2px #fff;
-
 }
 	
