changed cvetic to flower.png

--- a/html_css/style.css
+++ b/html_css/style.css
@@ -111,7 +111,7 @@ header h1 {
 }
 
 #main-menu li:hover {
-	background: url(img/cvetic.png) no-repeat;
+	background: url(img/flower.png) no-repeat;
 	background-position: bottom;
 }
 
